@@ -1,3 +1,5 @@
+* Make $F return null for unknown/unsupported elements. Closes #8381. [Christophe Porteneuve, jddalton, Michael Stillwell]
+
 * Make Form.Element#clear uncheck checkboxes/radio buttons, clear text inputs, deselect dropdown lists options, and skip button elements. [jddalton]
 
 * Extend BUTTON elements with Form.Element.Methods. Closes #9708. [jddalton, mensler]
